--- a/css/estils.css
+++ b/css/estils.css
@@ -23,3 +23,8 @@
 	text-align:center;
 	font-size:0.7em;
 }
+
+#NoConnectSplash {
+	background:#FFF url(img/nonetconn.png) top center no-repeat;
+	background-size:auto 100%;
+}
