--- a/css/estils.css
+++ b/css/estils.css
@@ -26,5 +26,5 @@
 
 #NoConnectSplash {
 	background:#FFF url(../img/nonetconn.png) top center no-repeat;
-	background-position:50%;
+	background-position:auto 100%;
 }
