--- a/css/estils.css
+++ b/css/estils.css
@@ -25,6 +25,6 @@
 }
 
 #NoConnectSplash {
-	background:#FFF url(../img/nonetconn.png) top center no-repeat;
+	background:#FFF url(../img/nonetconn.png) top center fixed;
 	background-size:auto 100%;
 }
