--- a/css/estils.css
+++ b/css/estils.css
@@ -26,8 +26,5 @@
 
 #NoConnectSplash {
 	background:#FFF url(../img/nonetconn.png) top center fixed;
-	background-size:cover;
-	-webkit-background-size: cover;
-  	-moz-background-size: cover;
-  	-o-background-size: cover;
+	background-size:auto 100%;
 }
